--- a/src/makefile
+++ b/src/makefile
@@ -4,5 +4,5 @@ LDFLAGS = -lglfw -lvulkan -ldl -lpthread -lX11 -lXxf86vm -lXrandr -lXi
 # setup: setup.cpp
 # 	g++ $(CFLAGS) -o setup setup.cpp $(LDFLAGS)
 
-window_surface: window_surface.cpp
-	g++ $(CFLAGS) -o window_surface window_surface.cpp $(LDFLAGS)
+presentation: presentation.cpp
+	g++ $(CFLAGS) -o presentation presentation.cpp $(LDFLAGS)
