Graphics pipeline basics

--- a/src/makefile
+++ b/src/makefile
@@ -4,5 +4,8 @@ LDFLAGS = -lglfw -lvulkan -ldl -lpthread -lX11 -lXxf86vm -lXrandr -lXi
 # setup: setup.cpp
 # 	g++ $(CFLAGS) -o setup setup.cpp $(LDFLAGS)
 
-presentation: presentation.cpp
-	g++ $(CFLAGS) -o presentation presentation.cpp $(LDFLAGS)
+# presentation: presentation.cpp
+# 	g++ $(CFLAGS) -o presentation presentation.cpp $(LDFLAGS)
+
+graphics_pipeline_basics: graphics_pipeline_basics.cpp
+	g++ $(CFLAGS) -o graphics_pipeline_basics graphics_pipeline_basics.cpp $(LDFLAGS)
